--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ botocore==1.35.29
 certifi==2024.8.30
 charset-normalizer==3.3.2
 click==8.1.7
+coloredlogs==15.0.1
 contourpy==1.3.0
 cycler==0.12.1
 datasets==3.0.1
@@ -16,6 +17,7 @@ dill==0.3.8
 filelock==3.16.1
 filetype==1.2.0
 fire==0.6.0
+flatbuffers==24.3.25
 fonttools==4.54.1
 frozenlist==1.4.1
 fsspec==2024.6.1
@@ -23,6 +25,7 @@ gitdb==4.0.11
 GitPython==3.1.43
 grpcio==1.66.2
 huggingface-hub==0.24.7
+humanfriendly==10.0
 idna==3.7
 Jinja2==3.1.4
 jmespath==1.0.1
@@ -35,6 +38,21 @@ multidict==6.1.0
 multiprocess==0.70.16
 networkx==3.3
 numpy==1.26.4
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.20.5
+nvidia-nvjitlink-cu12==12.6.68
+nvidia-nvtx-cu12==12.1.105
+onnx==1.16.2
+onnxruntime-gpu==1.19.2
+onnxslim==0.1.34
 opencv-python==4.9.0.80
 opencv-python-headless==4.10.0.84
 packaging==24.1
@@ -45,6 +63,7 @@ psutil==6.0.0
 py-cpuinfo==9.0.0
 pyarrow==17.0.0
 pybboxes==0.1.6
+pycocotools==2.0.8
 pyparsing==3.1.4
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
@@ -68,11 +87,13 @@ tensorboard-data-server==0.7.2
 termcolor==2.4.0
 terminaltables==3.1.10
 thop==0.1.1.post2209072238
+timm==1.0.9
 tokenizers==0.20.0
 torch==2.4.1
 torchvision==0.19.1
 tqdm==4.66.5
 transformers==4.45.1
+triton==3.0.0
 typing_extensions==4.12.2
 tzdata==2024.2
 ultralytics==8.2.103
