--- a/models/vision_transformer/config.yaml
+++ b/models/vision_transformer/config.yaml
@@ -1,11 +1,8 @@
 dataset_path: "../datasets/MEDIC/data/multimodal-deep-learning-disaster-response-mouzannar/multimodal"
-
-learning_rate: 0.00005
+learning_rate: 0.0001
 split_ratio: 0.9
-batch_size: 16
-
-start_epoch: 11
-epoch: 50
-checkpoint_dir: "chkpt/resnest"
+start_epoch: 1
+epoch: 15
+checkpoint_dir: "chkpt/vision_transformer"
 checkpoint_epoch: 1
-
+batch_size: 32
