--- a/models/vision_transformer/config.yaml
+++ b/models/vision_transformer/config.yaml
@@ -1,8 +1,8 @@
-dataset_path: "../datasets/MEDIC/data/multimodal-deep-learning-disaster-response-mouzannar/multimodal"
-learning_rate: 0.0001
+dataset_path: "../datasets/AIDER"
+learning_rate: 0.00005
 split_ratio: 0.9
 start_epoch: 1
 epoch: 50
 checkpoint_dir: "chkpt/vision_transformer"
 checkpoint_epoch: 1
-batch_size: 32
+batch_size: 16
