--- a/models/vision_transformer/config.yaml
+++ b/models/vision_transformer/config.yaml
@@ -1,8 +1,8 @@
-dataset_path: "../datasets/AIDER"
+dataset_path: "/media/nvme/datasets/AIDER"
 learning_rate: 0.000005
 split_ratio: 0.9
 start_epoch: 1
-epoch: 50
+epoch: 100
 checkpoint_dir: "chkpt/vision_transformer"
 checkpoint_epoch: 1
-batch_size: 16
+batch_size: 8
